compiler/testData/diagnostics/tests/inference/recursiveLocalFuns/recursiveLambda.fir.kt
fun foo() {
    fun bar() = {
        <!TYPECHECKER_HAS_RUN_INTO_RECURSIVE_PROBLEM, TYPECHECKER_HAS_RUN_INTO_RECURSIVE_PROBLEM!>bar()<!>
    }
}
